Started working on main review component but realized no linter. Committing before adding linter

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,8 +9,9 @@
     <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/7.2.0/react-redux.min.js"></script>
     <script crossorigin src="https://momentjs.com/downloads/moment.min.js"></script>
   </head>
-  <body>
-    <div id="REVIEWS_ATTACH_POINT"></div>
-
+  <body style="display: flex;">
+    <div style="width: 21.25%"> </div>
+    <div id="REVIEWS_ATTACH_POINT" style="width: 57.5%;"></div>
+    <div style="width: 21.25%"> </div>
   </body>
 </html>
