Webpack properly installed and working

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,8 @@
     <script crossorigin src="https://momentjs.com/downloads/moment.min.js"></script>
   </head>
   <body style="display: flex;">
-    <div style="width: 21.25%"> </div>
+    <div style="width: 21.25%;"> </div>
     <div id="REVIEWS_ATTACH_POINT" style="width: 57.5%;"></div>
-    <div style="width: 21.25%"> </div>
+    <div style="width: 21.25%;"> </div>
   </body>
 </html>
