--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,4 +14,6 @@
     <div id="REVIEWS_ATTACH_POINT" style="width: 57.5%;"></div>
     <div style="width: 21.25%;"> </div>
   </body>
+
+  <script src="./app.js"></script>
 </html>
