--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,9 +10,9 @@
     <script crossorigin src="https://momentjs.com/downloads/moment.min.js"></script>
   </head>
   <body style="display: flex;">
-    <div style="width: 21.25%;"> </div>
-    <div id="REVIEWS_ATTACH_POINT" style="width: 57.5%;"></div>
-    <div style="width: 21.25%;"> </div>
+    <div style="width: 21.3%;"> </div>
+    <div id="REVIEWS_ATTACH_POINT" style="width: 1105px; flex-shrink: 0;"></div>
+    <div style="width: 21.3%;"> </div>
   </body>
 
   <script src="./app.js"></script>
