--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,5 +15,5 @@
     <div style="width: 21.3%;"> </div>
   </body>
 
-  <script src="./app.js"></script>
+  <script src="http://127.0.0.1:3001/app.js"></script>
 </html>
