Added instructions to ReadMe for how to use this service in a proxy server

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body style="display: flex;">
     <div style="width: 21.3%;"> </div>
-    <div id="REVIEWS_ATTACH_POINT" style="width: 1105px; flex-shrink: 0;"></div>
+    <div id="REVIEWS_ATTACH_POINT"></div>
     <div style="width: 21.3%;"> </div>
   </body>
 
