Added ability to have deployed service be accessed via browser

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -43,5 +43,6 @@
     observer.observe(targetNode, config);
   </script>
 
-  <script src="http://127.0.0.1:3001/app.js"></script>
+  <!-- <script src="http://127.0.0.1:3001/app.js"></script> -->
+  <script src="http://54.183.137.155:3001/app.js"></script>
 </html>
