Added defer to libraries and elminated all render blocking resources

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <title>Reviews Service</title>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.5/redux.min.js"></script>
-    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/7.2.0/react-redux.min.js"></script>
-    <script crossorigin src="https://momentjs.com/downloads/moment.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" async>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.production.min.js" defer></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" defer></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js" defer></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.5/redux.min.js" defer></script>
+    <script crossorigin src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/7.2.0/react-redux.min.js" defer></script>
+    <script crossorigin src="https://momentjs.com/downloads/moment.min.js" defer></script>
   </head>
   <body>
     <div
@@ -43,6 +42,19 @@
     observer.observe(targetNode, config);
   </script>
 
-  <script src="http://127.0.0.1:3001/app.js" async></script>
-  <!-- <script src="http://54.183.137.155:3001/app.js" async></script> -->
+  <script async>
+    document.addEventListener('DOMContentLoaded', function() {
+      const N_IP = '127.0.0.1';
+
+      // const N_IP = '54.183.137.155';
+
+      axios.get(`http://${N_IP}:3001/app.js`)
+        .then((response) => {
+          eval(response.data)
+        })
+    })
+  </script>
+
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" async>
+
 </html>
