--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,6 +55,6 @@
     })
   </script>
 
-  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" async>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" defer>
 
 </html>
