Started working on S3 Cloudfront integration

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -48,8 +48,13 @@
 
       // const N_IP = '54.183.137.155';
 
-      axios.get(`http://${N_IP}:3001/app.js`)
+      const url = `http://${N_IP}:3001/app.js`;
+
+      // const url = 'https://dlxdbr1ckg1lj.cloudfront.net/reviews/app.js.gz';
+
+      axios.get(url)
         .then((response) => {
+          console.log(response)
           eval(response.data)
         })
     })
