Ability to get bundle from S3 via Cloudfront added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -50,7 +50,7 @@
 
       const url = `http://${N_IP}:3001/app.js`;
 
-      // const url = 'https://dlxdbr1ckg1lj.cloudfront.net/reviews/app.js.gz';
+      // const url = 'https://dlxdbr1ckg1lj.cloudfront.net/reviews/app.js';
 
       axios.get(url)
         .then((response) => {
